Fixed issue with close button on iOS. Fixed copy errors in tracks.json

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,4 @@
 
-
 .wrap {
     width: 100%;
     height: 100%;
@@ -23,7 +22,7 @@ p {
 
 .wrap article {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
     position: relative;
     z-index: 100;
     display: flex;
@@ -105,8 +104,10 @@ p {
   }
   @media only screen and (max-width: 56.25rem) {
     .close {
+        position: relative;
         top: auto;
-        bottom: 0;
+        margin-top: 2rem;
+        /* bottom: 0; */
       }
   }
   
